data/all_generated_tests/raw_wast_tests/br_if_TypeMismatchinControlFlowInstructions_1847.wast
;; 8. **Test 8: Invalid Stack State Post-Condition Check**    - **Description**: After evaluating the condition for `br_if`, ensure the stack state reflects correct type sequences for the branch target.    - **Constraint Checked**: Stack should be validated post-condition check before branching.    - **Relation to Type Mismatch**: Ensures correct stack state, adherence to expected result types.

(assert_invalid
  (module (func $invalid_stack_post_condition
    (block (result i32)
      (i32.const 0) 
      (br_if 0 (i32.const 1))
      (i64.const 1)
    )
  ))
  "type mismatch"
)